--- a/truthtable.html
+++ b/truthtable.html
@@ -11,7 +11,7 @@ THE SOFTWARE.
 -->
 
 <!DOCTYPE html>
-<html>
+<html lang="pt">
   <head>
 
     <link rel="icon" type="image/png" href="doc/github.png"/>
