--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ THE SOFTWARE.
 
     <div id='container'>
 
-      <div id="location"><a href='https://github.com/micalevisk' title="Novas funções foram adicionadas ao projeto original">Editado Por Micael Levi</a></div>
+      <div id="location"><a href='https://github.com/micalevisk/TruthTableGenerator-plus' title="Novas funções foram adicionadas ao projeto original">Editado Por Micael Levi</a></div>
       <div id='githublink'><a href='https://github.com/mrieppel/TruthTableGenerator'><img src='doc/github.png' alt="original code" title="código original" style="height:25px;"></a></div>
 
       <div id='title'>Gerador de Tabela Verdade</div>
