--- a/truthtable.html
+++ b/truthtable.html
@@ -30,8 +30,8 @@ THE SOFTWARE.
 
     <div id='container'>
 
-      <div id="location"><a href='https://github.com/micalevisk/TruthTableGenerator-plus' title="Novas funções foram adicionadas ao projeto original">Editado Por Micael Levi</a></div>
-      <div id='githublink'><a href='https://github.com/mrieppel/TruthTableGenerator'><img src='doc/github.png' alt="original code" title="código original" style="height:25px;"></a></div>
+      <div id="location"><a href='https://github.com/mrieppel/TruthTableGenerator' target = "_blank" title="Código do projeto oficial">projeto original</a></div>
+      <div id='githublink'><a href='https://github.com/micalevisk/TruthTableGenerator-plus' target = "_blank"><img src='doc/github.png' alt="Modificado por Micael Levi" title="Código alterado por Micael Levi" style="height:25px;"></a></div>
 
       <div id='title'>Gerador de Tabela Verdade</div>
 
