fix page format

--- a/truthtable.html
+++ b/truthtable.html
@@ -82,7 +82,8 @@ THE SOFTWARE.
             <input type="checkbox" id="linhas_criticas" class="check-with-label" onchange="construct()" title="Se a fórmula passada for um argumento"/>
             <label for="check" class="label-for-check"><b>Linhas Críticas</b></label><br>
 
-            <input type="checkbox" name="style" id="argumento" onchange="construct()" title="Se a fórmula passada for um argumento"/><b>Validade do Argumento</b>
+            <input type="checkbox" name="style" id="argumento" onchange="construct()" title="Se a fórmula passada for um argumento"/>
+            <b>Validade do Argumento</b>
           </td>
         </tr>
       </table>
