Estilos redefinidos e @font-face adicionadas

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ THE SOFTWARE.
     <link rel="icon" type="image/png" href="doc/github.png"/>
     <meta charset="UTF-8">
 
-    <title>Gerador de Tabela Verdade</title>
+    <title>Gerador de Tabela Verdade +</title>
 
     <script src='truthtable.js' type="text/javascript"></script>
 
