--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ THE SOFTWARE.
       <div id="location"><a href='https://github.com/mrieppel/TruthTableGenerator' target = "_blank" title="Código do projeto oficial">projeto original</a></div>
       <div id='githublink'><a href='https://github.com/micalevisk/TruthTableGenerator-plus' target = "_blank"><img src='doc/github.png' alt="Modificado por Micael Levi" title="Código alterado por Micael Levi" style="height:25px;"></a></div>
 
-      <div id='title'>Gerador de Tabela Verdade</div>
+      <div id='title'>Gerador de Tabela Verdade +</div>
 
       <table>
         <tr>
