preparado para iniciar testes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ THE SOFTWARE.
           </td>
 
           <td style="vertical-align:top;">
-            <input type="text" id="in" size="45" placeholder="fórmulas bem formadas" onkeypress="checkEnterKey(event)">
+            <input type="text" id="in" size="45" placeholder="fórmulas bem formadas (proposicionais)" onkeypress="checkEnterKey(event)">
           </td>
 
           <td style="vertical-align:top;">
