[tsk01] Agora o programa identifica se as fbfs é um argumento

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ THE SOFTWARE.
               <tr><td>Bicondicional</td><td>&lt;&gt;</td></tr>
               <tr><td>NAND</td><td>|</td></tr>
               <tr><td>Absurdo</td><td>#</td></tr>
+              <tr><td>Deduz que (&#x22A2;)</td></td><td>:</td></tr>
             </table>
           </td>
 
@@ -58,8 +59,9 @@ THE SOFTWARE.
               <tr><td>~A</td></tr>
               <tr><td>(A &amp; B)</td></tr>
               <tr><td>(# &gt; (B v ~A))</td></tr>
-              <tr><td>(A &amp; (~B > C))</td></tr>
-              <tr><td>(A &lt;&gt;(BvC)), A, (~B>C)</td></tr>
+              <tr><td>(A &amp; (~B &gt; C))</td></tr>
+              <tr><td>(A &lt;&gt;(BvC)), A, (~B&gt;C)</td></tr>
+              <tr><td>A &gt;B, ~B : ~A </td></tr>
             </table>
           </td>
 
