--- a/index.html
+++ b/index.html
@@ -70,19 +70,22 @@ THE SOFTWARE.
           </td>
 
           <td style="vertical-align:top;">
-            <input class="mainButton" type="button" value="Gerar Tabela" onclick="construct()"><br><br> <!-- [v2.1]5 -->
+            <input type="button" value="Gerar Tabela" onclick="construct()"><br><br> <!-- [v2.1]5/6 -->
             <input type="radio" name="style" id="main" checked>Tabela Principal<br>
             <input type="radio" name="style" id="full">Tabela Completa<br>
             <input type="radio" name="style" id="text">Tabela Texto<br>
             <input type="radio" name="style" id="latex">Tabela LaTeX<br><br>
 
-    			<div id="funcoes_argumento"> <!-- [v2.1]1  &  [v2.1]2  -->
-    				<input type="checkbox" id="linhas_criticas" class="check-with-label" onchange="changeVisibility_class('linhaCriticaIdentificador', this.checked)" title="Se a fórmula passada for um argumento"/> <!-- [v2.1]3 -->
-    				<label for="check" class="label-for-check"><b>Linhas Críticas</b></label><br>
+            <input type="checkbox" id="exibir_numero_linhas" onchange="changeVisibility_class('numeroLinha', this.checked)" title="exibir número das linhas"/>
+              <b>Mostrar Numeração</b><br>
 
-    				<input type="checkbox" name="style" id="argumento" onchange="changeVisibility('validade_argumento', this.checked)" title="Se a fórmula passada for um argumento"/> <!-- [v2.1]4 -->
-    				<b>Validade do Argumento</b>
-    			</div>
+      			<div id="funcoes_argumento" style="visibility: hidden;"> <!-- [v2.1]1  &  [v2.1]2 & [v2.1]7 -->
+      				<input type="checkbox" id="linhas_criticas" class="check-with-label" onchange="changeVisibility_class('linhaCriticaIdentificador', this.checked)" title="Se a fórmula passada for um argumento"/> <!-- [v2.1]3 -->
+      				  <label for="check" class="label-for-check"><b>Linhas Críticas</b></label><br>
+
+      				<input type="checkbox" id="argumento" onchange="changeVisibility('validade_argumento', this.checked)" title="Se a fórmula passada for um argumento"/> <!-- [v2.1]4 -->
+      				  <b>Validade do Argumento</b>
+      			</div>
           </td>
         </tr>
       </table>
