--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ THE SOFTWARE.
               <b>Mostrar Numeração</b><br>
 
       			<div id="funcoes_argumento" style="visibility: hidden;"> <!-- [v2.1]1  &  [v2.1]2 & [v2.1]7 -->
-      				<input type="checkbox" id="linhas_criticas" class="check-with-label" onchange="changeVisibility_class('linhaCriticaIdentificador', this.checked)" title="Se a fórmula passada for um argumento"/> <!-- [v2.1]3 -->
-      				  <label for="check" class="label-for-check"><b>Linhas Críticas</b></label><br>
+      				<input type="checkbox" id="linhas_criticas" onchange="changeVisibility_class('linhaCriticaIdentificador', this.checked)" title="Se a fórmula passada for um argumento"/> <!-- [v2.1]3 -->
+      				  <b>Linhas Críticas</b><br> <!-- [v2.1]8 -->
 
       				<input type="checkbox" id="argumento" onchange="changeVisibility('validade_argumento', this.checked)" title="Se a fórmula passada for um argumento"/> <!-- [v2.1]4 -->
       				  <b>Validade do Argumento</b>
