--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ THE SOFTWARE.
           </td>
 
           <td style="vertical-align:top;">
-            <input type="button" value="Gerar Tabela" onclick="construct()"><br><br> <!-- [v2.1]5/6 -->
+            <input type="button" value="Gerar Tabela" onclick="construct()"><br><br>
             <input type="radio" name="style" id="main" checked>Tabela Principal<br>
             <input type="radio" name="style" id="full">Tabela Completa<br>
             <input type="radio" name="style" id="text">Tabela Texto<br>
@@ -79,11 +79,11 @@ THE SOFTWARE.
             <input type="checkbox" id="exibir_numero_linhas" onchange="changeVisibility_class('numeroLinha', this.checked)" title="exibir número das linhas"/>
               <b>Mostrar Numeração</b><br>
 
-      			<div id="funcoes_argumento" style="visibility: hidden;"> <!-- [v2.1]1  &  [v2.1]2 & [v2.1]7 -->
-      				<input type="checkbox" id="linhas_criticas" onchange="changeVisibility_class('linhaCriticaIdentificador', this.checked)" title="Se a fórmula passada for um argumento"/> <!-- [v2.1]3 -->
-      				  <b>Linhas Críticas</b><br> <!-- [v2.1]8 -->
+      			<div id="funcoes_argumento" style="visibility: hidden;">
+      				<input type="checkbox" id="linhas_criticas" onchange="changeVisibility_class('linhaCriticaIdentificador', this.checked)" title="Se a fórmula passada for um argumento"/>
+      				  <b>Linhas Críticas</b><br>
 
-      				<input type="checkbox" id="argumento" onchange="changeVisibility('validade_argumento', this.checked)" title="Se a fórmula passada for um argumento"/> <!-- [v2.1]4 -->
+      				<input type="checkbox" id="argumento" onchange="changeVisibility('validade_argumento', this.checked)" title="Se a fórmula passada for um argumento"/>
       				  <b>Validade do Argumento</b>
       			</div>
           </td>
