Mudei o termo "argumento válido" para "consequência lógica"

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ THE SOFTWARE.
       				  <b>Linhas Críticas</b><br>
 
       				<input type="checkbox" id="argumento" onchange="changeVisibility('validade_argumento', this.checked)" title="Se a fórmula passada for um argumento"/>
-      				  <b>Validade do Argumento</b>
+      				  <b>Verifica se é consequência lógica</b>
       			</div>
           </td>
         </tr>
